--- a/RemindersiOS/RemindersiOS/Base.lproj/Main.storyboard
+++ b/RemindersiOS/RemindersiOS/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="5zs-sc-lCc" kind="relationship" relationship="viewControllers" id="sqM-dr-5dn"/>
-                        <segue destination="zba-md-HT3" kind="relationship" relationship="viewControllers" id="FCg-ET-qCd"/>
+                        <segue destination="4z0-qh-IwK" kind="relationship" relationship="viewControllers" id="YCG-aW-H48"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -59,6 +59,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="4qK-v6-dzs" kind="show" identifier="UserDetailSegue" id="bDJ-Xl-0fa"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -67,7 +70,9 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Users" image="user_group_man_woman" id="SEw-SQ-wJJ"/>
+                    <navigationItem key="navigationItem" id="tL9-nc-Yco"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="z8G-Pz-tZs">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <action selector="refresh:" destination="zba-md-HT3" eventType="valueChanged" id="bUG-4N-xy7"/>
@@ -76,7 +81,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Okt-bG-Xbq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="887" y="313"/>
+            <point key="canvasLocation" x="1762" y="311"/>
         </scene>
         <!--Reminders-->
         <scene sceneID="ZVl-y4-s2N">
@@ -112,6 +117,7 @@
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Reminders" image="create_new" id="6KZ-iO-Bas"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="p3Z-4C-0Ow">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <action selector="refresh:" destination="5zs-sc-lCc" eventType="valueChanged" id="FcU-ch-a03"/>
@@ -121,6 +127,118 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1l5-dP-ViR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="887" y="-423"/>
+        </scene>
+        <!--Users Detail Table View Controller-->
+        <scene sceneID="spX-Yj-8ze">
+            <objects>
+                <tableViewController id="4qK-v6-dzs" customClass="UsersDetailTableViewController" customModule="RemindersiOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="ewi-8N-C72">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="Name" id="9pt-cZ-Qn5">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="UsersDetailCell" textLabel="C87-IU-jsa" style="IBUITableViewCellStyleDefault" id="43T-EL-C7m">
+                                        <rect key="frame" x="0.0" y="55.5" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="43T-EL-C7m" id="IIV-9v-81f">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="C87-IU-jsa">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Username" id="2vS-2s-Ebs">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="UsersDetailCell" textLabel="ACs-7Z-Hwe" style="IBUITableViewCellStyleDefault" id="3Ng-Fr-ogl">
+                                        <rect key="frame" x="0.0" y="155.5" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Ng-Fr-ogl" id="c1u-bT-t3g">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ACs-7Z-Hwe">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Status" id="6W1-my-P2L">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="UsersDetailCell" id="sbo-yR-5pg">
+                                        <rect key="frame" x="0.0" y="255.5" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sbo-yR-5pg" id="Dh9-8k-7hl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="gmy-g3-3s1">
+                                                    <rect key="frame" x="20" y="7" width="374" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textField>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="4qK-v6-dzs" id="vw5-Lv-O57"/>
+                            <outlet property="delegate" destination="4qK-v6-dzs" id="mQ3-ye-dKM"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="d1d-mC-x7R">
+                        <barButtonItem key="rightBarButtonItem" title="Update" id="nOT-GX-r0T">
+                            <connections>
+                                <action selector="updateUser:" destination="4qK-v6-dzs" id="rL7-TS-jhk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="nameTextLabel" destination="C87-IU-jsa" id="mXb-x0-Cgm"/>
+                        <outlet property="statusTextField" destination="gmy-g3-3s1" id="Qtw-qt-fFb"/>
+                        <outlet property="usernameTextLabel" destination="ACs-7Z-Hwe" id="fQW-0r-nDd"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bYe-bA-3fo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2634.7826086956525" y="310.71428571428572"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="7ic-cv-ZxN">
+            <objects>
+                <navigationController id="4z0-qh-IwK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="8JQ-et-ekA"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9vS-Kl-WMh">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="zba-md-HT3" kind="relationship" relationship="rootViewController" id="aeA-KS-e0v"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j9c-Se-2bC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="887" y="311"/>
         </scene>
     </scenes>
     <resources>
